# sdk-cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: NeoRadarSDKConfig.cmake.in  PluginPackager.cmake  PluginPackaging.cmake
examples/: CMakeLists.txt
examples/basic_plugin/: CMakeLists.txt  main.cpp
include/NeoRadarSDK/: Aircraft.h  Airport.h  Chat.h  Fsd.h  Package.h  SDK.h  Tag.h
src/: SDK.cpp
